Added Student, Event Entity and Event service Impl.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>MoveServlet</servlet-name>
-		<servlet-class>data.MoveServlet</servlet-class>
+		<servlet-class>edu.studyup.data.MoveServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>MoveServlet</servlet-name>
